--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,31 @@ CET/obj/Debug/netcoreapp2.0/CET.pdb
 *.ide-shm
 *.ide
 .vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/Server/sqlite3/storage.ide-shm
+.vs/CET/v15/Server/sqlite3/storage.ide-wal
+CET/bin/Debug/netcoreapp2.0/CET.dll
+CET/bin/Debug/netcoreapp2.0/CET.pdb
+CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
+CET/obj/Debug/netcoreapp2.0/CET.dll
+CET/obj/Debug/netcoreapp2.0/CET.pdb
+.vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/Server/sqlite3/storage.ide-shm
+.vs/CET/v15/Server/sqlite3/storage.ide-wal
+CET/bin/Debug/netcoreapp2.0/CET.dll
+CET/bin/Debug/netcoreapp2.0/CET.pdb
+CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
+CET/obj/Debug/netcoreapp2.0/CET.dll
+CET/obj/Debug/netcoreapp2.0/CET.pdb
+.vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/Server/sqlite3/storage.ide-shm
+.vs/CET/v15/Server/sqlite3/storage.ide-wal
+CET/bin/Debug/netcoreapp2.0/CET.dll
+CET/bin/Debug/netcoreapp2.0/CET.pdb
+CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
+CET/obj/Debug/netcoreapp2.0/CET.dll
+CET/obj/Debug/netcoreapp2.0/CET.pdb
