gitnore please work

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,12 @@ CET/bin/Debug/netcoreapp2.0/CET.pdb
 CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
 CET/obj/Debug/netcoreapp2.0/CET.dll
 CET/obj/Debug/netcoreapp2.0/CET.pdb
+.vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/Server/sqlite3/storage.ide-shm
+.vs/CET/v15/Server/sqlite3/storage.ide-wal
+CET/bin/Debug/netcoreapp2.0/CET.dll
+CET/bin/Debug/netcoreapp2.0/CET.pdb
+CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
+CET/obj/Debug/netcoreapp2.0/CET.dll
+CET/obj/Debug/netcoreapp2.0/CET.pdb
