--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,19 @@ CET/bin/Debug/netcoreapp2.0/CET.pdb
 CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
 CET/obj/Debug/netcoreapp2.0/CET.dll
 CET/obj/Debug/netcoreapp2.0/CET.pdb
+.vs/CET/v15/.suo
+.vs/CET/v15/Server/sqlite3/storage.ide
+.vs/CET/v15/Server/sqlite3/storage.ide-shm
+.vs/CET/v15/Server/sqlite3/storage.ide-wal
+.vs/config/applicationhost.config
+CET/bin/Debug/netcoreapp2.0/CET.deps.json
+CET/bin/Debug/netcoreapp2.0/CET.dll
+CET/bin/Debug/netcoreapp2.0/CET.pdb
+CET/bin/Debug/netcoreapp2.0/CET.runtimeconfig.dev.json
+CET/obj/CET.csproj.nuget.cache
+CET/obj/CET.csproj.nuget.g.props
+CET/obj/Debug/netcoreapp2.0/CET.csproj.CoreCompileInputs.cache
+CET/obj/Debug/netcoreapp2.0/CET.csprojAssemblyReference.cache
+CET/obj/Debug/netcoreapp2.0/CET.dll
+CET/obj/Debug/netcoreapp2.0/CET.pdb
+CET/obj/project.assets.json
